src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>MX_SB_MLT_Bsq_Poliza__c</fullName>
        <description>Número de Póliza para buscar</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Número de Póliza para buscar</inlineHelpText>
        <label>Póliza a buscar</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Bsq_RFC__c</fullName>
        <description>RFC para búsqueda de póliza</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>RFC a busscar la póliza</inlineHelpText>
        <label>RFC</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Bsq_Reg_Emp__c</fullName>
        <description>Registro de Empleado a buscar su póliza</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Registro de Empleado a buscar su póliza</inlineHelpText>
        <label>Registro Empleado</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Bsq_Telefono__c</fullName>
        <description>Teléfono a buscar la póliza</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Teléfono para buscar la póliza asociada</inlineHelpText>
        <label>Teléfono</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_CC_link__c</fullName>
        <description>multiasistencia link claim center</description>
        <formula>$Label.MX_SB_MLT_ClaimCenterURL + MX_SB_MLT_External_Id__c+&apos;&amp;idAgent=&apos;+ Owner:User.FederationIdentifier</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Liga Claim Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Calle__c</fullName>
        <description>Calle de la ubicación del Siniestro</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre de Calle</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_CitaFecha__c</fullName>
        <description>Calendario que marcara la Fecha de la Cita del reportante.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de la Cita</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_CitaLugar__c</fullName>
        <description>Campo que almacenara el lugar de la cita del reportante del siniestro.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Lugar de la Cita</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_CitaTipo__c</fullName>
        <description>Campo que almacenara el tipo de cita del reportante siniestro.</description>
        <label>Tipo de la Cita</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Autoajuste</fullName>
                </value>
                <value>
                    <fullName>Ajustador con Cita</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_ClaimNumber__c</fullName>
        <description>Número de Claim Center</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Claim Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_ClauseNumber__c</fullName>
        <description>Inciso o Certificado de la Póliza</description>
        <label>Inciso / Certificado</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_CodigoPostal__c</fullName>
        <description>Código Postal de la ubicación del siniestro</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Código Postal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Colonia__c</fullName>
        <description>Colonia de la ubicación del Siniestro</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Colonia</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_ColorVehiculo__c</fullName>
        <description>Descripción del Vehículo</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Color de Vehículo</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_ComentariosSiniestro__c</fullName>
        <description>Comentarios del Siniestro</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comentarios</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Company__c</fullName>
        <description>Parametro aseguradora de Claim Center usado en tarea de datos</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Compañía</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_CostoCristal__c</fullName>
        <description>Parámetro costo Cristal de Claim Center usado en Tarea de Datos</description>
        <label>Costo Cristal</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_CreateDateCC__c</fullName>
        <description>Fecha de creación de Siniestro en Claim Center</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha Creación</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_DeclaracionSiniestro__c</fullName>
        <description>Declaración de Siniestro</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Declaración Siniestro</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_DescripcionVehiculo__c</fullName>
        <description>Descripción del Vehículo para Póliza</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Descripción del Vehículo</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Email__c</fullName>
        <description>Correo Electronico del reportante</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Correo Electrónico</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_EstadoCivilConductor__c</fullName>
        <description>Estado civil del condutor</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Estado Civil Conductor</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Estado_Codigo__c</fullName>
        <description>Genera el código de estado usado en Catálogo de Claim Center</description>
        <formula>CASE(
 MX_SB_MLT_Estado__c ,&quot;Aguascalientes&quot;,&quot;Ma_aguascalientes&quot;,
&quot;Baja California&quot;,&quot;Ma_bajaCalifornia&quot;,
&quot;Baja California Sur&quot;,&quot;Ma_bajaCaliforniaSur&quot;,
&quot;Campeche&quot;,&quot;Ma_campeche&quot;,
&quot;Chiapas&quot;,&quot;Ma_chiapas&quot;,
&quot;Chihuahua&quot;,&quot;Ma_chihuahua&quot;,
&quot;Ciudad de México&quot;,&quot;Ma_ciudaddemexico&quot;,
&quot;Coahuila&quot;,&quot;Ma_coahuiladezaragoza&quot;,
&quot;Colima&quot;,&quot;Ma_colima&quot;,
&quot;Durango&quot;,&quot;Ma_durango&quot;,
&quot;Estado de México&quot;,&quot;Ma_estadodemexico&quot;,
&quot;Guanajuato&quot;,&quot;Ma_guanajuato&quot;,
&quot;Guerrero&quot;,&quot;Ma_guerrero&quot;,
&quot;Hidalgo&quot;,&quot;Ma_hidalgo&quot;,
&quot;Jalisco&quot;,&quot;Ma_jalisco&quot;,
&quot;Michoacán&quot;,&quot;Ma_michoacandeocampo&quot;,
&quot;Morelos&quot;,&quot;Ma_morelos&quot;,
&quot;Nayarit&quot;,&quot;Ma_nayarit&quot;,
&quot;Nuevo León&quot;,&quot;Ma_nuevoLeon&quot;,
&quot;Oaxaca&quot;,&quot;Ma_oaxaca&quot;,
&quot;Puebla&quot;,&quot;Ma_puebla&quot;,
&quot;Querétaro&quot;,&quot;Ma_queretaro&quot;,
&quot;Quintana Roo&quot;,&quot;Ma_quintanaRoo&quot;,
&quot;San Luis Potosi&quot;,&quot;Ma_sanLuisPotosi&quot;,
&quot;Sinaloa&quot;,&quot;Ma_sinaloa&quot;,
&quot;Sonora&quot;,&quot;Ma_sonora&quot;,
&quot;Tabasco&quot;,&quot;Ma_tabasco&quot;,
&quot;Tamaulipas&quot;,&quot;Ma_tamaulipas&quot;,
&quot;Tlaxcala&quot;,&quot;Ma_tlaxcala&quot;,
&quot;Veracruz&quot;,&quot;Ma_veracruzdeignaciodelallave&quot;,
&quot;Yucatán&quot;,&quot;Ma_yucatan&quot;,
&quot;Zacatecas&quot;,&quot;Ma_zacatecas&quot;,
&quot;SIN CAPTURAR&quot;)</formula>
        <label>Codigo de Estado en Claim</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Estado__c</fullName>
        <description>Estado de ubicación del Siniestro</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Estado</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_EstatusSolicitud__c</fullName>
        <description>Estatus de la Solicitud</description>
        <label>Estatus Solicitud</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Event__c</fullName>
        <description>Parametro Evento de Claim Center usado en Tarea de Datos</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Evento</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_External_Id__c</fullName>
        <description>Identificador externo</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Identificador Externo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_FechaNacimientoConductor__c</fullName>
        <description>Fecha de Nacimiento del Conductor</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha Nacimiento Conductor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_FechaRegistro__c</fullName>
        <description>Fecha de Registro</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha Registro</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_FechaVencimientoLicencia__c</fullName>
        <description>Fecha de vencimiento de licencia del Conductor</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha Vencimiento Licencia</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_FolioCC__c</fullName>
        <description>Numero de Folio generado por Claim Center</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Folio Claim Center</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_GlassInicidentDate__c</fullName>
        <description>Fecha de Incidente de tipo cristalera</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha Incidente</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_GlassInicidentService__c</fullName>
        <description>Fecha de servicio del incidente de cristalera</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Servicio Cristales</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_GlassInicidentTime__c</fullName>
        <description>Hora de incidente de cristalera</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Hora Incidente</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Glass__c</fullName>
        <description>Cristales afectados en siniestro</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Cristales Afectados</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_GlasswareKey__c</fullName>
        <description>Código Cristalera</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Clave Cristalera</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_GlasswareName__c</fullName>
        <description>Nombre de Cristalera</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre Cristalera</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_IdService__c</fullName>
        <description>Folio del Servicio</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Identificador del Servicio</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_IdUsuario__c</fullName>
        <description>Id de Usuario</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Identificacdor de Usuario</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_InsuranceCompany__c</fullName>
        <description>Asegurador</description>
        <inlineHelpText>Aseguradora</inlineHelpText>
        <label>Aseguradora</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MX_SB_MLT_Insurance</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_InsuredLastName2__c</fullName>
        <description>Apellido Materno Asegurado</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Apellido Materno</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_InsuredLastName__c</fullName>
        <description>Apellido Paterno de Asegurado</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Apellido Paterno</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_InsuredName__c</fullName>
        <description>Nombre del Asegurado</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_IsVIP__c</fullName>
        <description>¿Es cliente VIP?</description>
        <defaultValue>false</defaultValue>
        <label>Cliente VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_LegacySystem__c</fullName>
        <description>Parametro Tipo de Tarea de Claim Center</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Legacy System</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_MarcaCristal__c</fullName>
        <description>Parámetro marca de cristal de Claim Center</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Marca Cristal</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Marca__c</fullName>
        <description>Marca del Vehículo para Póliza</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Marca del Vehículo</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Mensaje2__c</fullName>
        <description>Parámetro de Mensaje2 de Claim Center</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Mensaje2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_MensajePDA2__c</fullName>
        <description>Parámetro de MensajePDA2 de Claim Center</description>
        <encryptionScheme>None</encryptionScheme>
        <label>MensajePDA2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_MensajePDA__c</fullName>
        <description>Parámetro de MensajePDA de Claim Center</description>
        <encryptionScheme>None</encryptionScheme>
        <label>MensajePDA</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Mensaje__c</fullName>
        <description>Parámetro de Mensaje de Claim Center</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Mensaje</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Mobilephone__c</fullName>
        <description>Telefono Celular del Asegurado</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Teléfono Adicional</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Modelo__c</fullName>
        <description>Modelo del Vehículo de la Póliza</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Modelo de Vehículo</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Motor__c</fullName>
        <description>Número de Serie del Motor</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Motor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_NombreConductor__c</fullName>
        <description>Nombre de Conductor</description>
        <encryptionScheme>None</encryptionScheme>
        <label>MX SB MLT NombreConductor</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_NombreTercero__c</fullName>
        <description>Nombre de tercero afectado</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre Tercero</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_NumeroCalle__c</fullName>
        <description>Numero Exterior de Ubicación del Siniestro</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Número Exterior</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_NumeroLicencia__c</fullName>
        <description>Numero de Licencia del conductor</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Licencia</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_NumeroOcupantes__c</fullName>
        <description>Número de Ocupantes del Vehículo</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Ocupantes</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_NumeroSerie__c</fullName>
        <description>Número de serie del vehículo que esta en la Póliza</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Número de Serie</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_ObservacionesPDA__c</fullName>
        <description>Parámetro de ObservacionesPDA de Claim Center</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ObservacionesPDA</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Observaciones__c</fullName>
        <description>Parámetro de Observaciones de Claim Center</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Observaciones</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_OcupacionConductor__c</fullName>
        <description>Ocupacíon del conductor de vehículo</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Ocupación del Conductor</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Origen__c</fullName>
        <description>Origen de Siniestro</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Origen</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Phone__c</fullName>
        <description>Teléfono del reportante</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Teléfono</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Placas__c</fullName>
        <description>Placas del Vehículo de la Póliza.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Placas del Vehículo</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_PolizaTD__c</fullName>
        <description>Póliza de Tarea de Datos</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Póliza</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_ProcedenciaCristal__c</fullName>
        <description>Procedencia de Cristal</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Procedencia Cristal</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Product__c</fullName>
        <description>Clasificación de la llamada</description>
        <inlineHelpText>Clasificación de la llamada</inlineHelpText>
        <label>Clasificación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MX_SB_MLT_Product</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_PropiedadAjena__c</fullName>
        <description>Pregunta que se le realizara al reportante del siniestro.</description>
        <label>¿Genero daños en propiedad ajena?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MX_SB_MLT_Q_ThirdPresent__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Q_AuthorityPresent__c</fullName>
        <description>Pregunta que se le realizara al reportarte del siniestro</description>
        <label>¿Está presente o en camino la autoridad?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MX_SB_MLT_PropiedadAjena__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Q_ThirdPresent__c</fullName>
        <description>Indica si el tercero involucrado en el sisniestro está presente</description>
        <label>¿Está presente el tercero involucrado?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MX_SB_MLT_Q_VehicleWorks__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Q_VehicleWorks__c</fullName>
        <description>Pregunta que se le realizara al reportante del siniestro.</description>
        <label>¿Su vehículo puede seguir circulando?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_RelacionAsegurado__c</fullName>
        <description>Relación de conductor con el asegurado</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Relación Asegurado</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_RequiereAmbulancia__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bandera que indica si es necesario la asistencia de Ambulancia.</description>
        <inlineHelpText>Marcar para disparar asistencia de ambulancia.</inlineHelpText>
        <label>Requiere ambulancia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_RequiereGrua__c</fullName>
        <defaultValue>false</defaultValue>
        <description>siniestro asistencia grua</description>
        <inlineHelpText>Marcar para solicitar asistencia de grua</inlineHelpText>
        <label>Requiere grua</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_RequiereParamedico__c</fullName>
        <defaultValue>false</defaultValue>
        <description>siniestro asistencia paramedico</description>
        <inlineHelpText>Marcar para solicitar asistencia de paramedico en motocicleta</inlineHelpText>
        <label>Requiere paramedico</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_SegmentClient__c</fullName>
        <description>Segemento del cliente</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Segmento Cliente</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_SexoConductor__c</fullName>
        <description>Sexo del conductor</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sexo Conductor</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Subtype__c</fullName>
        <description>Tipo de caso</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Tipo Caso</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_TelefonoCristalera__c</fullName>
        <description>Teléfono de contacto de cristalera</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Teléfono Cristalera</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Telefono__c</fullName>
        <description>Teléfono</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Teléfono</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_TipoAuto__c</fullName>
        <description>Tipo de Automóvil</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Vehículo</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_TipoCristal__c</fullName>
        <description>Tipo de Cristal afectado</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Tipo de Cristal</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_URLLocation__c</fullName>
        <description>Latitud y Longitud</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Coordenadas</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_UbicacionSucursalCristalera__c</fullName>
        <description>Ubicación de Sucursal de Cristalera</description>
        <label>Ubicación Cristalera</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_ActivarRetencion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Se utiliza como banderas para activar el flujo de retención en el objeto caso.</description>
        <label>Activar Retención</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_ApellidoMaternoCliente__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ingresar Apellido Materno</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_ApellidoPaternoCliente__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ingresar Apellido Paterno</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_Argumento__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Se relaciona los objeto con el registro de argumentos.</description>
        <label>Argumento</label>
        <referenceTo>MX_SB_SAC_Argumento__c</referenceTo>
        <relationshipLabel>Casos</relationshipLabel>
        <relationshipName>Casos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_CanalCompra__c</fullName>
        <description>Canal por el cual se compró la póliza</description>
        <label>Canal compra</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bcom</fullName>
                </value>
                <value>
                    <fullName>BMovil</fullName>
                </value>
                <value>
                    <fullName>Sucursal</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_Catalogotipificacion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Se ocupara cuando para guardar el registro relacionado con el caso creado, dependiendo de la tipificación</description>
        <label>Catálogo de tipificación</label>
        <referenceTo>MX_SB_SAC_CatalogoTipificacion__c</referenceTo>
        <relationshipLabel>Casos</relationshipLabel>
        <relationshipName>Casos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_CierreCaso__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Se utiliza para realizar el cierre del caso.</description>
        <label>Cierre Caso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_CodigoCondusef__c</fullName>
        <description>Este campo se llena dependiendo el detalle del caso</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Código CONDUSEF</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_Color__c</fullName>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Verde</fullName>
                </value>
                <value>
                    <fullName>Amarillo</fullName>
                </value>
                <value>
                    <fullName>Rojo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_ComentariosBO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comentarios BO</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_ComentariosDevolucion__c</fullName>
        <description>Este campo  es para ingresar los comentarios cuando se rechaza la devolución BO3</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comentarios Devolución</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_Contestada__c</fullName>
        <description>Sirve para saber si un cliente ya contesto la encuesta, no la vuelva a contestar</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contestada</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_ContinuaFlujoMalasVentas__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check para controlar la visualización de la continuación del flujo de malas ventas (Flujo: MX_SB_SAC_MalasVentasContinuacion)</description>
        <label>Continua Flujo Malas Ventas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_Contrato__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relación con el objeto de Contratos</description>
        <label>Contrato</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Casos</relationshipLabel>
        <relationshipName>Casos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_CorreoCuenta__c</fullName>
        <description>campo que se llenara cuando se asocie una cuanta al caso y el correo electrónico no este vació</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Correo de la cuenta</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_CorreoEnviado__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Se ocupara para delimitar el envío de correo electrónicos y</description>
        <label>Correo enviado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_CorreoEnviadoBO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>se ocupara cuando el BO envie correo a cliente por documentación errónea</description>
        <label>Correo enviado BO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_CumpleComentarios__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Se ocupará para visualizar que el comentario cumpla con los criterios necesarios por el negocio (mas de 10 caracteres).</description>
        <label>Cumple comentarios</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>